<resources>
    <string name="app_name">Ride</string>
    <string name="activity_login_hint_email">Email</string>
    <string name="activity_login_hint_password">Password</string>
    <string name="activity_login_sign_in_button">Sign In</string>
    <string name="activity_login_label_before_register">Do not have an account? </string>
    <string name="activity_login_label_register"><b>Sign up Now</b></string>
    <string name="activity_login_label_forgot_password"><b>Forgot Password?</b></string>
    <string name="activity_login_sign_in_by_google">Sign In With Google</string>
    <string name="activity_register_editext_username">Username</string>
    <string name="activity_register_editext_email">Email</string>
    <string name="activity_register_editext_password">Password</string>
    <string name="activity_register_editext_mobile">Mobile</string>
    <string name="activity_register_editext_phone_prefix">+60</string>
    <string name="activity_register_editext_male">Male</string>
    <string name="activity_register_editext_female">Female</string>
    <string name="activity_register_sign_up_button">Sign Up</string>
    <string name="something_missing_dialog_text">Uhh...Something is missing...</string>
    <string name="something_missing_dialog_okay">Okay</string>
    <string name="acitivty_main_nav_header_image_view">profile icon</string>
    <string name="activity_main_open">Open</string>
    <string name="activity_main_close">Close</string>
    <string name="activity_main_menu_1">RidePay</string>
    <string name="activity_main_menu_2">Trip</string>
    <string name="activity_main_menu_6">Inbox</string>
    <string name="activity_main_menu_3">Emergency</string>
    <string name="activity_main_menu_4">Help Centre</string>
    <string name="activity_main_menu_5">Drive with Ride</string>
    <string name="actionbar" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyDXPSLAOzrObTUv0WrSQk5mCEKFIO2pc08</string>
    <string name="activity_main_pick_up">Where are you now?</string>
    <string name="activity_main_drop_off">Where are you going?</string>
    <string name="activty_main_book_button">CHOOSE YOUR DROP-OFF</string>
    <string name="activity_main_remark">Add some note to driver</string>
    <string name="activity_main_person">1</string>
    <string name="activity_main_payment">Cash</string>
    <string name="activity_main_time">Now</string>
    <string name="activity_main_book">BOOK NOW</string>
    <string name="activity_main_address_not_found">Address not found</string>
    <string name="activity_main_address_found">Address found</string>
    <string name="activity_main_invalid_position">Invalid Position</string>
    <string name="activity_main_service_not_found">Service not found</string>
    <string name="activity_main_label_car">RidePool</string>
    <string name="activity_main_price">RM 20</string>
    <string name="activity_main_label_note">Note</string>
    <string name="activity_main_label_apply">APPLY</string>
    <string name="activity_main_hint_note">Write your note here...</string>
    <string name="edit_profile_dialog_name">Chee Wee</string>
    <string name="edit_profile_dialog_label_review">review</string>
    <string name="edit_profile_dialog_label_completed_route">Completed Trip</string>
    <string name="edit_profile_dialog_label_save">Save</string>
    <string name="edit_profile_dialog_label_logout">LOGOUT</string>
    <string name="edit_profile_dialog_title">Profile</string>
    <string name="edit_profile_dialog_label_edit">EDIT PROFILE</string>
    <string name="activity_profile_label_completed_ride">Completed Ride</string>
    <string name="activity_profile_rating">Rating</string>
    <string name="edit_profile_dialog_gender">Gender</string>
    <string name="edit_profile_upload_photo_dialog_title">Upload a Photo</string>
    <string name="edit_profile_upload_photo_dialog_photo">Take a New Photo</string>
    <string name="edit_profile_upload_photo_dialog_gallery">Choose From Gallery</string>
    <string name="activity_main_invalid_time_dialog_title">Invalid Time</string>
    <string name="activity_main_invalid_time_dialog_message">Sorry, route must be at least 10 minutes from now</string>
    <string name="activity_main_invalid_time_dialog_button">ALRIGHT</string>
    <string name="fragment_confirm_ride_label_no_upcoming_trip">No upcoming trips</string>
    <string name="fragment_confirm_ride_button">Create route</string>
    <string name="fragment_pending_ride_label_no_pending">No pending trips</string>
    <string name="fragment_pending_ride_label_waiting_for_driver">Waiting for driver to accept</string>
    <string name="fragment_pending_ride_label_start" />
    <string name="fragment_pending_trip_title">Trip</string>
    <string name="fragment_pending_ride_detail_pick_up_point">Pick up point</string>
    <string name="fragment_pending_ride_detail_drop_off_point">Drop off point</string>
    <string name="fragment_pending_ride_detail_payment_method">Pay by</string>
    <string name="fragment_pending_ride_detail_fare">Fare</string>
    <string name="fragment_pending_ride_detail_time">Time</string>
    <string name="fragment_pending_ride_detail_hint_note">Note</string>
    <string name="fragment_pending_ride_detail_note">None</string>
    <string name="fragment_pending_ride_detail_title">Ride Detail</string>
    <string name="fragment_pending_ride_detail_delete_dialog_message1">Are you sure to delete this trip?</string>
    <string name="fragment_pending_ride_detail_delete_dialog_message2">This cannot be undone.</string>
    <string name="fragment_pending_ride_detail_delete_dialog_confirm">Confirm</string>
    <string name="fragment_pending_ride_detail_delete_dialog_cancel">Cancel</string>
    <string name="fragment_pending_ride_detail_delete">Delete</string>
    <string name="fragment_pending_ride_detail_edit">Edit</string>
    <string name="driver_found_dialog" />
    <string name="driver_found_dialog_confirm_button">Confirm</string>
    <string name="driver_found_dialog_label">Yay, We found you a driver!</string>
    <string name="match_ride_activity" />
    <string name="match_ride_activity_label_status">Status:</string>
    <string name="match_ride_activity_status_coming">Your Driver Is On The Way</string>
    <string name="match_ride_activity_status_arrived">Your driver has arrived!</string>
    <string name="match_ride_activity_status_not_start">Pending</string>
    <string name="match_ride_activity_status_destination">Your Driver Is On The To Your Destination</string>
    <string name="match_ride_activity_button">Track</string>
    <string name="start_route_activity">Tracking</string>
    <string name="activity_start_route_otw_moving_text">Your driver will be arrived in few minutes. Please get ready yay :)</string>
    <string name="activity_start_route_arrive_moving_text">Your driver have arrived. Please get on the car as soon as possible.</string>
    <string name="completed_route_dialog_title">Congratulations</string>
    <string name="completed_route_dialog_label">Yay! You have finished your journey successful!</string>
    <string name="completed_route_dialog_button">Okay</string>
    <string name="rating_dialog_label">What was the service about Chee Wee</string>
    <string name="rating_dialog_hint_comment">Comman are anonymously shared with drivers</string>
    <string name="rating_dialog_label_detail">Trip Details</string>
    <string name="rating_dialog_button_submit">Submit</string>
    <string name="driver_is_otw_dialog_label">Driver Is On The Way</string>
    <string name="driver_is_otw_dialog_label_content">Your driver will be arrived in few minutes more. Please well prepared everything before driver is come. Wish you have a nice day :)</string>
    <string name="driver_is_otw_dialog_track_button">Track My Driver</string>
    <string name="activity_match_ride_list_view_item_label_other_rider"><u>Other Riders</u></string>
    <string name="activity_profile_completed_ride">Completed Ride</string>
    <string name="driver_pick_up_dialog_title">Yay, Enjoy your journey</string>
    <string name="driver_pick_up_dialog_content">Congratz, you have successfully hitch-hike right now :) Keep chat with each other might a good way to ice breaking between each other. Wish you have a nice day :)</string>
    <string name="driver_pick_up_dialog_button">Alright</string>
    <string name="location_request_dialog_title">Location Request</string>
    <string name="location_request_dialog_content">In order to get your current location and better user experience, you have to enable your location permission.</string>
    <string name="location_request_dialog_enable_button">Enable</string>
    <string name="activity_past_ride_detail_label_booking_number">Booking No</string>
    <string name="activity_past_ride_detail_label_fare">Fare:</string>
    <string name="activity_past_ride_detail_payment_method">RidePay</string>
    <string name="activity_past_ride_detail_label_rating">Rating for this ride</string>
    <string name="activity_past_ride_detail_label_comment">Comment</string>
    <string name="fragment_pending_ride_label_no_history">No completed trips</string>
    <string name="past_ride_detail_dialog_hint_comment">No comment is given</string>
    <string name="activity_wallet_label_balance">RM</string>
    <string name="activity_wallet_label_current_balance">Current Balance</string>
    <string name="activity_wallet_label_top_up">Top Up</string>
    <string name="activity_wallet_label_explain_top_up">Top up money into your RidePay</string>
    <string name="activity_wallet_label_withdraw">Withdraw</string>
    <string name="activity_wallet_label_explain_withdraw">Transfer money to your account</string>
    <string name="activity_wallet_label_history">History</string>
    <string name="activity_wallet_label_explain_history">Check your RidePay transaction history</string>
    <string name="activity_wallet_label_bank_card">Bank Cards</string>
    <string name="activity_wallet_label_explain_bank_card">Link your bank cards with RidePay</string>
    <string name="activity_splash_screen_label_slogan_1">It\'s good day to</string>
    <string name="activity_splash_screen_label_slogan_2">Have A good</string>
    <string name="activity_splash_screen_label_developer">Power By Ride</string>
    <string name="activity_splash_screen_label_divier">OR</string>
    <string name="activity_splash_screen_sign_In_with_account_button">Sign In With Email</string>
    <string name="bank_card_dialog_label_add_bank_card">Add a Bank Card</string>
    <string name="bank_card_dialog_title">Add Card</string>
    <string name="bank_card_dialog_label_not_found">No Bank Card Is Found</string>
    <string name="add_bank_card_dialog_title">Add Card</string>
    <string name="add_bank_card_dialog_hint_card_number">Card number</string>
    <string name="add_bank_card_dialog_hint_expiry">Expiry (mm/yy)</string>
    <string name="add_bank_card_dialog_hint_cvv">CVV</string>
    <string name="add_bank_card_dialog_label_primary">Set as primary</string>
    <string name="add_bank_card_dialog_label_term_condition"><![CDATA[By adding your debit/credit card, you agree to the]]></string>
    <string name="add_bank_card_dialog_label_term_condition_2"><u>Terms conditions</u></string>
    <string name="add_bank_card_dialog_save_button">Save</string>
    <string name="set_default_bank_card_dialog_title">Change This Card As Primary</string>
    <string name="set_default_bank_card_dialog_contenxt">Are you sure that you want to set this card as primary?  *All the transaction will based on the primary card as first priority.</string>
    <string name="set_default_bank_card_dialog_confirm_button">Confirm</string>
    <string name="set_default_bank_card_dialog_cancel_button">No, Thanks</string>
    <string name="top_up_dialog_label_bank_card">Bank Card</string>
</resources>