<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/ridePAy"
        android:icon="@drawable/activity_main_ridepay"
        android:title="@string/activity_main_menu_1"/>

    <item android:id="@+id/trip"
        android:icon="@drawable/actvity_main_trip_icon"
        android:title="@string/activity_main_menu_2"/>

    <item android:id="@+id/emergency"
        android:icon="@drawable/activity_main_emergency"
        android:title="@string/activity_main_menu_3"/>

    <item android:id="@+id/helpCenter"
        android:icon="@drawable/activity_main_help"
        android:title="@string/activity_main_menu_4"/>

    <item android:id="@+id/driveWithRide"
        android:icon="@drawable/activity_main_drive"
        android:title="@string/activity_main_menu_5"/>


</menu>